--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,9 +1,1 @@
-.vscode/**
-.vscode-test/**
-.gitignore
-.yarnrc
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/.eslintrc.json
-**/*.map
-**/*.ts
+package-lock.json
